--- a/src/components/optionB/OptionB.module.css
+++ b/src/components/optionB/OptionB.module.css
@@ -1,53 +1,86 @@
 
-.searchBar {
-    font-size: 20px;
-    margin-left: 12px;
-    display: block;
-    margin-bottom: 20px;
+.contentCard {
+    /*width: 300px;*/
+    /*display: inline-block;*/
+    /*margin-left: 10px;*/
+    /*margin-right: 10px;*/
+    /*vertical-align: top;*/
+    /*margin-bottom: 20px;*/
 }
 
-.contentCard {
-    width: 300px;
-    display: inline-block;
-    margin-left: 10px;
-    margin-right: 10px;
-    vertical-align: top;
+
+.contentGridBody {
+    padding-top: 65px;
+    padding-left: 90px;
+    padding-right: 20px;
+    background-color: rgb(248, 248, 248);
+
+}
+
+.contentMainGrid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 15px;
+    row-gap: 40px;
 }
 
 .thumbnail {
-    width: 300px;
+    /*width: 300px;*/
+    width: 100%;
     /*height: 300px;*/
     /*object-fit: fill;*/
-    object-position: top;
-    display: block;
+    /*object-position: top;*/
+    /*display: inline-block;*/
 }
 
 .thumbnailDiv {
-    margin-bottom: 12px;
+    margin-bottom: 10px;
+    position: relative;
+}
+
+.timePosition {
+    background-color: black;
+    color: white;
+    border: none;
+    border-radius: 3px;
+    font-weight: 500;
+    padding: 4px 2px;
+
+    position: absolute;
+    right: 8px;
+    bottom: 14px;
 }
 
 p {
-    font-family: Arial;
+    font-family: Arial, system-ui;
     margin-top: 0;
     margin-bottom: 0;
 }
 
-.profilePictureDiv {
-    display: inline-block;
-    width: 50px;
-    vertical-align: top;
+.detailsGrid {
+    display: grid;
+    grid-template-columns: 50px 1fr;
+    /*gap: 1px;*/
 }
 
-.pictureLogo {
-    width: 40px;
-    border: none;
-    border-radius: 25px;
+.profilePictureDiv {
     /*display: inline-block;*/
+    /*width: 50px;*/
+    /*vertical-align: top;*/
+    /*background-color: grey;*/
 }
 
 .contentDetailsDiv {
-    display: inline-block;
-    width: 250px;
+    /*display: inline-block;*/
+    /*width: 250px;*/
+    /*background-color: green;*/
+}
+
+.pictureLogo {
+    width: 35px;
+    /*border: none;*/
+    border-radius: 50px;
+    /*display: inline-block;*/
 }
 
 .title {
@@ -56,7 +89,7 @@ p {
     line-height: 20px;
     /*margin-left: 5px;*/
     /*width: 300px;*/
-    margin-bottom: 11px;
+    margin-bottom: 12px;
 }
 
 .creator,
@@ -68,5 +101,23 @@ p {
 }
 
 .creator {
-    margin-bottom: 5px;
+    margin-bottom: 4px;
+}
+
+@media (max-width: 750px) {
+    .contentMainGrid {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media (min-width: 751px) and (max-width: 1023px) {
+    .contentMainGrid {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media (min-width: 1024px) {
+    .contentMainGrid {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
 }
